--- a/flowers.html
+++ b/flowers.html
@@ -27,6 +27,6 @@
       <div class="sunflwr__pedal--11"></div>
       <div class="sunflwr__pedal--12"></div>
     </div>
-    <script src="/JAVASCRIPT/flowers.js"></script>
+    <script src="/flowers.js"></script>
 </body>
 </html>
