--- a/flowers.html
+++ b/flowers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower</title>
-    <link rel="stylesheet" href="/flowers.css">
+    <link rel="stylesheet" href="/CSS/flowers.css">
 
 </head>
 <body>
@@ -27,6 +27,6 @@
       <div class="sunflwr__pedal--11"></div>
       <div class="sunflwr__pedal--12"></div>
     </div>
-    <script src="/flowers.js"></script>
+    <script src="/JAVASCRIPT/flowers.js"></script>
 </body>
 </html>
