--- a/flowers.html
+++ b/flowers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower</title>
-    <link rel="stylesheet" href="/CSS/flowers.css">
+    <link rel="stylesheet" href="CSS/flowers.css">
 
 </head>
 <body>
